--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -1,3 +1,7 @@
 [GameplayTagPicker]
 InputTag.Expanded=True
+Player.Expanded=True
+Player.Weapon.Expanded=True
+Player.Event.Expanded=True
+Player.Event.Equip.Expanded=True
 
