Attribute system partially done

--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -1,6 +1,6 @@
 [GameplayTagPicker]
-InputTag.Expanded=True
-Player.Expanded=True
+InputTag.Expanded=False
+Player.Expanded=False
 Player.Weapon.Expanded=True
 Player.Event.Expanded=True
 Player.Event.Equip.Expanded=True
@@ -13,4 +13,5 @@ InputTag.LightAttack.Expanded=True
 InputTag.HeavyAttack.Expanded=True
 Player.Ability.Attack.Heavy.Expanded=True
 Player.Status.Expanded=True
+Enemy.Expanded=True
 
