--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -29,4 +29,5 @@ Shared.Status.Expanded=True
 GameplayCue.Sounds.Death.Guardian.Expanded=True
 GameplayCue.Sounds.Death.Expanded=True
 Enemy.Status.Expanded=True
+GameplayCue.Sounds.MeleeHit.Stick.Expanded=True
 
