Block ability started, hit react done

--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -1,5 +1,5 @@
 [GameplayTagPicker]
-InputTag.Expanded=False
+InputTag.Expanded=True
 Player.Expanded=True
 Player.Weapon.Expanded=True
 Player.Event.Expanded=True
@@ -13,7 +13,7 @@ InputTag.LightAttack.Expanded=True
 InputTag.HeavyAttack.Expanded=True
 Player.Ability.Attack.Heavy.Expanded=True
 Player.Status.Expanded=True
-Enemy.Expanded=True
+Enemy.Expanded=False
 Shared.Expanded=True
 Shared.Event.Expanded=True
 Shared.SetByCaller.Expanded=True
@@ -24,10 +24,13 @@ Enemy.Ability.Expanded=True
 GameplayCue.Sounds.MeleeHit.Axe.Expanded=True
 GameplayCue.Sounds.MeleeHit.Expanded=True
 GameplayCue.Sounds.Expanded=True
-GameplayCue.Expanded=True
+GameplayCue.Expanded=False
 Shared.Status.Expanded=True
 GameplayCue.Sounds.Death.Guardian.Expanded=True
 GameplayCue.Sounds.Death.Expanded=True
 Enemy.Status.Expanded=True
 GameplayCue.Sounds.MeleeHit.Stick.Expanded=True
+Player.Ability.Attack.Light.Expanded=False
+Shared.Status.HitReact.Expanded=True
+InputTag.MustBeHeld.Expanded=True
 
