Building target lock, block done

--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -1,25 +1,25 @@
 [GameplayTagPicker]
 InputTag.Expanded=True
 Player.Expanded=True
-Player.Weapon.Expanded=True
-Player.Event.Expanded=True
+Player.Weapon.Expanded=False
+Player.Event.Expanded=False
 Player.Event.Equip.Expanded=True
 Player.Ability.Expanded=True
 Player.Ability.Equip.Expanded=True
-Player.Ability.Unequip.Expanded=True
+Player.Ability.Unequip.Expanded=False
 Player.Event.Unequip.Expanded=True
 Player.Ability.Attack.Expanded=True
 InputTag.LightAttack.Expanded=True
 InputTag.HeavyAttack.Expanded=True
 Player.Ability.Attack.Heavy.Expanded=True
-Player.Status.Expanded=True
+Player.Status.Expanded=False
 Enemy.Expanded=False
 Shared.Expanded=True
 Shared.Event.Expanded=True
 Shared.SetByCaller.Expanded=True
-Player.SetByCaller.Expanded=True
+Player.SetByCaller.Expanded=False
 Player.SetByCaller.AttackType.Expanded=True
-Shared.Ability.Expanded=True
+Shared.Ability.Expanded=False
 Enemy.Ability.Expanded=True
 GameplayCue.Sounds.MeleeHit.Axe.Expanded=True
 GameplayCue.Sounds.MeleeHit.Expanded=True
@@ -33,4 +33,9 @@ GameplayCue.Sounds.MeleeHit.Stick.Expanded=True
 Player.Ability.Attack.Light.Expanded=False
 Shared.Status.HitReact.Expanded=True
 InputTag.MustBeHeld.Expanded=True
+GameplayCue.FX.MagicShield.Expanded=True
+GameplayCue.FX.Expanded=True
+GameplayCue.FX.MagicShield.SuccesfullBlock.Expanded=True
+GameplayCue.FX.MagicShield.PerfectBlock.Expanded=True
+InputTag.Toggleable.Expanded=True
 
