--- a/Config/DefaultGameplayTags.ini
+++ b/Config/DefaultGameplayTags.ini
@@ -9,6 +9,8 @@ InvalidTagCharacters="\"\',"
 NumBitsForContainerSize=6
 NetIndexFirstBitSegment=16
 +GameplayTagList=(Tag="GameplayCue.FX.MagicShield",DevComment="")
++GameplayTagList=(Tag="GameplayCue.FX.MagicShield.PerfectBlock",DevComment="")
++GameplayTagList=(Tag="GameplayCue.FX.MagicShield.SuccesfullBlock",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Sounds.Death",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Sounds.Death.Guardian",DevComment="")
 +GameplayTagList=(Tag="GameplayCue.Sounds.MeleeHit.Axe",DevComment="")
