--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -12,7 +12,7 @@ Player.Ability.Attack.Expanded=True
 InputTag.LightAttack.Expanded=True
 InputTag.HeavyAttack.Expanded=True
 Player.Ability.Attack.Heavy.Expanded=True
-Player.Status.Expanded=False
+Player.Status.Expanded=True
 Enemy.Expanded=False
 Shared.Expanded=True
 Shared.Event.Expanded=True
