--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -347,7 +347,7 @@ CrashReporterSettings=EnhancedInputDeveloperSettings.Modifier Default Values.Inp
 GameplayDebuggerUserSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.LevelEditor.ExternalBuilds,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,IOSRuntimeSettings.Remote Build.Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 GameplayTagsDeveloperSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.LevelEditor.ExternalBuilds,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,IOSRuntimeSettings.Remote Build.Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,GameMapsSettings.DefaultModes.SelectedGameModeDetails
 LogVisualizerSettings=EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierSmoothDelta,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierDeadZone,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierResponseCurveExponential,EnhancedInputDeveloperSettings.Modifier Default Values.InputModifierFOVScaling,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerDown,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPressed,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerPulse,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerReleased,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHold,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerHoldAndRelease,EnhancedInputDeveloperSettings.Trigger Default Values.InputTriggerTap,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Android,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_IOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Linux,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_LinuxArm64,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Mac,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_TVOS,EnhancedInputDeveloperSettings.Enhanced Input.EnhancedInputPlatformSettings_Windows,EditorKeyboardShortcutSettings.LevelEditor.OpenFavoriteFile,EditorKeyboardShortcutSettings.LevelEditor.OpenRecentFile,EditorKeyboardShortcutSettings.LevelEditor.ExternalBuilds,EditorKeyboardShortcutSettings.MainFrame.SwitchProject,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureResolution,EditorKeyboardShortcutSettings.EditorViewport.ShowTextureScale,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.AxisMappings.Look Up / Down Gamepad,InputSettings.Bindings.AxisMappings.Look Up / Down Mouse,InputSettings.Bindings.AxisMappings.Move Forward / Backward,InputSettings.Bindings.AxisMappings.Move Right / Left,InputSettings.Bindings.AxisMappings.Turn Right / Left Gamepad,InputSettings.Bindings.AxisMappings.Turn Right / Left Mouse,InputSettings.Platforms.InputPlatformSettings_Android,InputSettings.Platforms.InputPlatformSettings_IOS,InputSettings.Platforms.InputPlatformSettings_Linux,InputSettings.Platforms.InputPlatformSettings_LinuxArm64,InputSettings.Platforms.InputPlatformSettings_Mac,InputSettings.Platforms.InputPlatformSettings_TVOS,InputSettings.Platforms.InputPlatformSettings_Windows,IOSRuntimeSettings.Remote Build.Secondary Remote Build Options,IOSRuntimeSettings.Remote Build.Remote Build Options,TakeRecorderProjectSettings.Audio Input Device.AudioInputDevice,TakeRecorderProjectSettings.Animation Recorder.TimecodeBoneMethod,GameMapsSettings.DefaultModes.SelectedGameModeDetails
-InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_UnequipAxe.IA_UnequipAxe,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_LightAttack_Axe.IA_LightAttack_Axe,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_HeavyAttack_Axe.IA_HeavyAttack_Axe,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_Block.IA_Block,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_TargetLOck.IA_TargetLOck
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_UnequipAxe.IA_UnequipAxe,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_LightAttack_Axe.IA_LightAttack_Axe,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_HeavyAttack_Axe.IA_HeavyAttack_Axe,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_Block.IA_Block,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_TargetLOck.IA_TargetLOck,InputMappingContext.Mappings.ActionMappings./Game/PlayerCharacter/Input/Actions/IA_SwitchTarget.IA_SwitchTarget
 InputAction=
 BlendSpace1D=AnimGraphNode_BlendSpaceGraph.Blend Space.None,BlendSpace1D.Axis Settings.Horizontal Axis
 AnimGraphNode_BlendSpaceGraph=BlendSpace1D.Axis Settings.Horizontal Axis,AnimGraphNode_BlendSpaceGraph.Blend Space.None
@@ -455,7 +455,7 @@ bPreloadProjectPluginModules=True
 LastLevel=/Game/Maps/FeatureDevMap
 
 [ModuleFileTracking]
-Warrior.TimeStamp=2024.10.09-11.02.17
+Warrior.TimeStamp=2024.10.09-11.12.27
 Warrior.LastCompileMethod=External
 StorageServerClient.TimeStamp=2024.09.20-05.18.37
 StorageServerClient.LastCompileMethod=Unknown
@@ -1795,8 +1795,8 @@ PrimitiveComponent="\"Object\" "
 SpringArmComponent="\"Object\" "
 CameraComponent="\"Object\" "
 DataAsset_InputConfig="\"Object\" \"Object.DataAsset_InputConfig.NativeInputActions\" \"Object.DataAsset_InputConfig.NativeInputActions.NativeInputActions[0]\" \"Object.DataAsset_InputConfig.NativeInputActions.NativeInputActions[1]\" \"Object.DataAsset_InputConfig.NativeInputActions.NativeInputActions[2]\" \"Object.DataAsset_InputConfig.AbilityInputActions\" \"Object.DataAsset_InputConfig.AbilityInputActions.AbilityInputActions[6]\" "
-DataAsset="\"Object\" \"Object.DataAsset_InputConfig.NativeInputActions\" \"Object.DataAsset_InputConfig.NativeInputActions.NativeInputActions[0]\" \"Object.DataAsset_InputConfig.NativeInputActions.NativeInputActions[1]\" \"Object.DataAsset_InputConfig.NativeInputActions.NativeInputActions[2]\" \"Object.DataAsset_InputConfig.AbilityInputActions\" \"Object.DataAsset_InputConfig.AbilityInputActions.AbilityInputActions[6]\" "
-InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" "
+DataAsset="\"Object\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[1]\" "
 InputAction="\"Object\" "
 PersonaPreviewSceneDescription="\"Object\" "
 PreviewMeshCollection="\"Object\" \"Object.SkeletalMeshes\" "
@@ -4124,6 +4124,7 @@ CleanShutdown=True
 DebuggerAttached=False
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=GameplayAbilitiesEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationBlueprintEditor
@@ -4147,7 +4148,6 @@ RecentAssetEditors=AnimationEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=AnimationBlueprintEditor
-RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
 RecentAssetEditors=AnimationEditor
@@ -4213,17 +4213,17 @@ ContentBrowserTab1.VerticalSplitter.SlotSize1=0.75
 ContentBrowserTab1.FavoriteSplitter.SlotSize0=0.200000003
 ContentBrowserTab1.FavoriteSplitter.SlotSize1=0.800000012
 ContentBrowserTab1.FavoriteSplitter.SlotSize2=0.400000006
-ContentBrowserTab1.SelectedPaths=/Game/PlayerCharacter
+ContentBrowserTab1.SelectedPaths=/Game/PlayerCharacter/GameplayAbility
 ContentBrowserTab1.PluginFilters=
 ContentBrowserTab1.Favorites.SelectedPaths=
 ContentBrowserTab1.SelectedCollections=
 ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ThumbnailSize=2
 ContentBrowserTab1.CurrentViewType=1
+ContentBrowserTab1.JumpMRU=/All/Game/PlayerCharacter/GameplayAbility
 ContentBrowserTab1.JumpMRU=/All/Game/PlayerCharacter
 ContentBrowserTab1.JumpMRU=/All/Game/PlayerCharacter/Input
 ContentBrowserTab1.JumpMRU=/All/Game/PlayerCharacter/Input/Actions
-ContentBrowserTab1.JumpMRU=/All/Game/PlayerCharacter/GameplayAbility
 ContentBrowserTab1.JumpMRU=/All/Game/PlayerCharacter/AnimBP/AnimLayer
 ContentBrowserTab1.JumpMRU=/All/Game/PlayerCharacter/AnimBP
 ContentBrowserTab1.JumpMRU=/All/Game/PlayerCharacter/AnimBP/BlendSpace
@@ -4434,36 +4434,36 @@ CrashReportsPrivacySettings=True
 DataValidationSettings=True
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/PlayerCharacter/Input/Actions/IA_SwitchTarget
-MRUItem1=/Game/PlayerCharacter/DA_InputConfig
-MRUItem2=/Game/PlayerCharacter/GameplayAbility/GA_Hero_TargetLock
-MRUItem3=/Game/PlayerCharacter/AnimBP/BlendSpace/BS_DirectionalLocomotion_Axe
-MRUItem4=/Game/PlayerCharacter/AnimBP/AnimLayer/AnimLayer_HeroAxe
-MRUItem5=/Game/PlayerCharacter/AnimBP/MasterAnimLayer_Hero
-MRUItem6=/Game/Widgets/HeroWidgets/WBP_TargetLockIndicator
-MRUItem7=/Game/EnemyCharacter/DummyEnemy/BT_Dummy
-MRUItem8=/Game/PlayerCharacter/HeroWeapon/BP_HeroAxe
-MRUItem9=/Game/PlayerCharacter/Input/IMC_Axe
-MRUItem10=/Game/PlayerCharacter/GameplayAbility/LightAttack/GA_Hero_LightAttack_Axe
-MRUItem11=/Game/PlayerCharacter/GameplayAbility/LightAttack/GA_Hero_LightAttackMaster
-MRUItem12=/Game/PlayerCharacter/GameplayAbility/GA_Hero_Block
-MRUItem13=/Game/GameplayCue/GC_Hero_PerfectBlock
-MRUItem14=/Game/GameplayCue/GC_Hero_SuccesfulBlock
-MRUItem15=/Game/Assets/HeroCharacter/SK_CharM_Barbarous
-MRUItem16=/Game/GameplayCue/GC_Hero_MagicShield
-MRUItem17=/Game/PlayerCharacter/GameplayAbility/GA_Hero_HitReact
-MRUItem18=/Game/PlayerCharacter/Montages/AM_Hero_StandingBlock
-MRUItem19=/Game/Assets/HeroCharacter/Animations/Axe/Hero_StandingBlock_Idle
-MRUItem20=/Game/Assets/HeroCharacter/Animations/Axe/Hero_AxeBlockReactLarge
-MRUItem21=/Game/Assets/HeroCharacter/Animations/Axe/Hero_AxeBlock
-MRUItem22=/Game/EnemyCharacter/DummyEnemy/BP_Dummy_Guardian
-MRUItem23=/Game/PlayerCharacter/Input/Actions/IA_Block
-MRUItem24=/Game/PlayerCharacter/AnimBP/ABP_Hero
-MRUItem25=/Game/PlayerCharacter/Montages/Equip/AM_Hero_Axe_Unequip
-MRUItem26=/Game/PlayerCharacter/Montages/Equip/AM_Hero_Axe_Equip
-MRUItem27=/Game/PlayerCharacter/Montages/HitReact/AM_Hero_HitReact_Right
-MRUItem28=/Game/PlayerCharacter/Montages/HitReact/AM_Hero_HitReact_Left
-MRUItem29=/Game/PlayerCharacter/Montages/HitReact/AM_Hero_HitReact_Back
+MRUItem0=/Game/PlayerCharacter/GameplayAbility/GA_Hero_TargetLock
+MRUItem1=/Game/PlayerCharacter/Input/IMC_TargetLock
+MRUItem2=/Game/PlayerCharacter/Input/Actions/IA_SwitchTarget
+MRUItem3=/Game/PlayerCharacter/DA_InputConfig
+MRUItem4=/Game/PlayerCharacter/AnimBP/BlendSpace/BS_DirectionalLocomotion_Axe
+MRUItem5=/Game/PlayerCharacter/AnimBP/AnimLayer/AnimLayer_HeroAxe
+MRUItem6=/Game/PlayerCharacter/AnimBP/MasterAnimLayer_Hero
+MRUItem7=/Game/Widgets/HeroWidgets/WBP_TargetLockIndicator
+MRUItem8=/Game/EnemyCharacter/DummyEnemy/BT_Dummy
+MRUItem9=/Game/PlayerCharacter/HeroWeapon/BP_HeroAxe
+MRUItem10=/Game/PlayerCharacter/Input/IMC_Axe
+MRUItem11=/Game/PlayerCharacter/GameplayAbility/LightAttack/GA_Hero_LightAttack_Axe
+MRUItem12=/Game/PlayerCharacter/GameplayAbility/LightAttack/GA_Hero_LightAttackMaster
+MRUItem13=/Game/PlayerCharacter/GameplayAbility/GA_Hero_Block
+MRUItem14=/Game/GameplayCue/GC_Hero_PerfectBlock
+MRUItem15=/Game/GameplayCue/GC_Hero_SuccesfulBlock
+MRUItem16=/Game/Assets/HeroCharacter/SK_CharM_Barbarous
+MRUItem17=/Game/GameplayCue/GC_Hero_MagicShield
+MRUItem18=/Game/PlayerCharacter/GameplayAbility/GA_Hero_HitReact
+MRUItem19=/Game/PlayerCharacter/Montages/AM_Hero_StandingBlock
+MRUItem20=/Game/Assets/HeroCharacter/Animations/Axe/Hero_StandingBlock_Idle
+MRUItem21=/Game/Assets/HeroCharacter/Animations/Axe/Hero_AxeBlockReactLarge
+MRUItem22=/Game/Assets/HeroCharacter/Animations/Axe/Hero_AxeBlock
+MRUItem23=/Game/EnemyCharacter/DummyEnemy/BP_Dummy_Guardian
+MRUItem24=/Game/PlayerCharacter/Input/Actions/IA_Block
+MRUItem25=/Game/PlayerCharacter/AnimBP/ABP_Hero
+MRUItem26=/Game/PlayerCharacter/Montages/Equip/AM_Hero_Axe_Unequip
+MRUItem27=/Game/PlayerCharacter/Montages/Equip/AM_Hero_Axe_Equip
+MRUItem28=/Game/PlayerCharacter/Montages/HitReact/AM_Hero_HitReact_Right
+MRUItem29=/Game/PlayerCharacter/Montages/HitReact/AM_Hero_HitReact_Left
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -4723,6 +4723,7 @@ GraphEditorQuickJumps=()
 /Game/Widgets/HeroWidgets/WBP_TargetLockIndicator.WBP_TargetLockIndicator=1
 /Game/PlayerCharacter/AnimBP/BlendSpace/BS_DirectionalLocomotion_Axe.BS_DirectionalLocomotion_Axe=1
 /Game/PlayerCharacter/Input/Actions/IA_SwitchTarget.IA_SwitchTarget=1
+/Game/PlayerCharacter/Input/IMC_TargetLock.IMC_TargetLock=1
 
 [MessageLog]
 LastLogListing=PIE
