Done till section 6

--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -2,7 +2,7 @@
 InputTag.Expanded=True
 Player.Expanded=True
 Player.Weapon.Expanded=False
-Player.Event.Expanded=False
+Player.Event.Expanded=True
 Player.Event.Equip.Expanded=True
 Player.Ability.Expanded=True
 Player.Ability.Equip.Expanded=True
@@ -19,7 +19,7 @@ Shared.Event.Expanded=True
 Shared.SetByCaller.Expanded=True
 Player.SetByCaller.Expanded=False
 Player.SetByCaller.AttackType.Expanded=True
-Shared.Ability.Expanded=False
+Shared.Ability.Expanded=True
 Enemy.Ability.Expanded=True
 GameplayCue.Sounds.MeleeHit.Axe.Expanded=True
 GameplayCue.Sounds.MeleeHit.Expanded=True
