Doen till before boss spawns other enemies(lec. 210)

--- a/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
+++ b/Saved/Config/WindowsEditor/GameplayTagsEditorState.ini
@@ -39,4 +39,5 @@ GameplayCue.FX.MagicShield.SuccesfullBlock.Expanded=True
 GameplayCue.FX.MagicShield.PerfectBlock.Expanded=True
 InputTag.Toggleable.Expanded=True
 GameplayCue.FX.UnblockableWarning.Expanded=True
+GameplayCue.Sounds.Death.FrostGiant.Expanded=True
 
